--- a/src/pages/maturity-model.css
+++ b/src/pages/maturity-model.css
@@ -11,6 +11,15 @@
 .maturity-model__header .btn {
   margin-top: 20px;
 }
+@media (max-width: 992px) {
+  .pull-right {
+    float: none !important;
+  }
+  .maturity-model__header .btn {
+    margin-top: 0px;
+    margin-bottom: 20px;
+  }
+}
 
 .maturity-model p {
   margin-left: 15px;
@@ -23,9 +32,14 @@
 
 .maturity-model h3 {
   font-weight: 900;
+  margin-left: .5em;
+}
+.maturity-model ul {
+  margin-left: 1em;
+  margin-bottom: 2em;
 }
 
 .maturity-model li {
   margin-bottom: 10px;
-  font-size: 16px;
+  font-size: 20px;
 }
